--- a/manifest.json
+++ b/manifest.json
@@ -12,8 +12,8 @@
         }
       ],
       "icons": {
-        "16": "logo16.png",
-        "48": "logo48.png",
-        "128": "logo128.png"
+        "16": "logo/logo16.png",
+        "48": "logo/logo48.png",
+        "128": "logo/logo128.png"
       }
   }
